--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,8 +16,6 @@
     "@typescript-eslint/return-await": "off",
     "@typescript-eslint/no-namespace": "off",
     "no-redeclare": "off",
-    "import/export": "off",
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "import/export": "off"
   }
 }
