--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.2",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
@@ -18,6 +19,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "faker": "^5.5.3",
     "git-commit-msg-linter": "^3.2.6",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
