--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.2",
@@ -27,5 +28,8 @@
     "lint-staged": "^11.0.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
