--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "jsx": "react",
+    "jsx": "preserve",
     "rootDir": "src",
     "baseUrl": "src",
     "paths": {
@@ -19,6 +19,10 @@
     "resolveJsonModule": true,
   },
   "include": [
-    "src"
+    "src/**/*.ts",
+    "src/**/*.tsx",
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
